# SimpleXmlValidator

./: .clang-format  CMakeLists.txt  README.md  define.hpp  main.cpp  simple_validator.hpp  simple_validator_impl.hpp  tag.cpp  tag.hpp
tag_validator/: character_tag_validator.cpp  character_tag_validator.hpp  open_close_tag_validator.cpp  open_close_tag_validator.hpp  tag_validators.hpp  xml_declaration_tag_validator.cpp  xml_declaration_tag_validator.hpp
text_validator/: special_character_text_validator.cpp  special_character_text_validator.hpp
